--- a/public/assets/css/auth.css
+++ b/public/assets/css/auth.css
@@ -49,6 +49,9 @@ body {
   text-align: center;
   margin-bottom: 1.5rem;
 }
+label {
+font-size: 17px;
+}
 
 input,
 select,
@@ -58,6 +61,7 @@ button {
   padding: 0 15px;
   font-size: 17px;
   margin-bottom: 1.3rem;
+  margin-top:0.2rem;
   border: 1px solid #ddd;
   border-radius: 6px;
   outline: none;
